--- a/public/index.html
+++ b/public/index.html
@@ -47,3 +47,5 @@
 </html>
 <!-- Bootstrap script -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+<!-- fontAwesome -->
+<script src="https://kit.fontawesome.com/cd8f1662fe.js" crossorigin="anonymous"></script>
